# connectopy

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  dimorphism.Rmd  final_project2.Rmd  final_project2.html  load_data.m  pca-vae.Rmd  pyproject.toml  requirements.txt  shape_plots.ipynb
.Rproj.user/97C15BC8/pcs/: files-pane.pper  windowlayoutstate.pper
.Rproj.user/shared/notebooks/: paths
.github/workflows/: ci.yml  docker.yml  publish.yml
Data/: cog_sc_fc_y.csv  master_ml_dataset.csv
Documentation/: Reproducibility.md  Results.md
Runners/: __init__.py  run_alcohol_analysis.py  run_mediation_hcp.py  run_pipeline.py  setup_environment.py
brain_connectome/: __init__.py  cli.py
brain_connectome.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
brain_connectome/analysis/: __init__.py  dimorphism.py  logistic.py  pca.py  svm.py  vae.py
brain_connectome/data/: __init__.py  hcp_loader.py  loader.py  preprocessing.py
brain_connectome/models/: __init__.py  classifiers.py
brain_connectome/visualization/: __init__.py  plots.py
code/: README.md  dataloader.Rmd  dimorphism.Rmd  final_project2.Rmd  pca-vae.Rmd
data/: README.md
data/Overview of HCP Dataset/: README.md
data/processed/: X_cog_only_allsubjects.csv  Y_substance_domains_allsubjects.csv  alcohol_traits.csv  cog_sc_fc_y.csv
data/processed_data/: README.md  data_check.Rmd  sex_data_sc.csv
data_inputs/: ebm_input_pca.csv  ebm_input_tnpca.csv
docs/: Makefile
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst
docs/source/api/: analysis.rst  data.rst  index.rst  models.rst  visualization.rst
ebm_inputs/: ebm_input_vae.csv
ebm_results/: ebm_alcohol.py  ebm_summary_metrics.csv  roc_F_pca.csv  roc_F_vae.csv  shape_plots.ipynb  shape_plots_loader.ipynb  shape_plots_saver.ipynb
ebm_results/data_inputs/: make_ebm_datasets.py
ebm_results/models/: ebm_F_cog_only.pkl  ebm_F_pca.pkl  ebm_F_pca_only.pkl  ebm_F_tnpca.pkl  ebm_F_tnpca_only.pkl  ebm_F_vae.pkl  ebm_F_vae_only.pkl  ebm_M_cog_only.pkl  ebm_M_pca.pkl  ebm_M_pca_only.pkl  ebm_M_tnpca.pkl  ebm_M_tnpca_only.pkl  ebm_M_vae.pkl  ebm_M_vae_only.pkl
ebm_results/plots/: shape_plots.ipynb
ebm_results/plots/roc curves/: roc_F_cog_only.csv  roc_F_pca.csv  roc_F_pca_only.csv  roc_F_tnpca.csv  roc_F_tnpca_only.csv  roc_F_vae.csv  roc_F_vae_only.csv  roc_M_cog_only.csv  roc_M_pca.csv  roc_M_pca_only.csv  roc_M_tnpca.csv  roc_M_tnpca_only.csv  roc_M_vae.csv  (+1 more)
ebm_results/summary data/: ebm_summary_metrics.csv  roc_F_cog_only.csv  roc_F_pca_only.csv  roc_F_tnpca.csv  roc_F_tnpca_only.csv  roc_F_vae_only.csv  roc_M_cog_only.csv  roc_M_pca.csv  roc_M_pca_only.csv  roc_M_tnpca.csv  roc_M_tnpca_only.csv  roc_M_vae.csv  roc_M_vae_only.csv
notebooks/: colab_demo.ipynb  local_demo.ipynb
r-package/: DESCRIPTION  LICENSE  NAMESPACE  README.md
r-package/R/: analysis.R  data_loader.R  models.R  zzz.R
rf_results/: rf_alcohol.py  rf_summary_metrics.csv
rf_results/models/: rf_F_cog_only.joblib  rf_F_pca.joblib  rf_F_pca_only.joblib  rf_F_tnpca.joblib  rf_F_vae.joblib  rf_F_vae_only.joblib  rf_M_cog_only.joblib  rf_M_pca.joblib  rf_M_pca_only.joblib  rf_M_tnpca.joblib  rf_M_tnpca_only.joblib  rf_M_vae_only.joblib
tests/: __init__.py  conftest.py  test_analysis.py  test_mediation.py  test_models.py  test_preprocessing.py
(+9 files in other folders)
